change return url

--- a/test1.html
+++ b/test1.html
@@ -103,13 +103,13 @@
     <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" onclick="validateForm()">
 
         <input type=hidden name="oid" value="00D8J0000008fh0">
-        <input type=hidden name="retURL" value="http://gleanings.org">
+        <input type=hidden name="retURL" value="https://gleanings.org/volunteering/">
         <input type=hidden name="recordType" value="0128J0000004HT8">
         <input type="hidden" id="lead_source" name="lead_source" value="booking_form">
         <!--  ----------------------------------------------------------------------  -->
         <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
         <!--  these lines if you wish to test in debug mode.                          -->
-        <input type="hidden" name="debug" value=1>
+        <input type="hidden" name="debug" value=0>
         <input type="hidden" name="debugEmail" value="miles@gleanings.org">
         <!--  ----------------------------------------------------------------------  -->
 
