--- a/test1.html
+++ b/test1.html
@@ -103,7 +103,7 @@
     <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" onclick="validateForm()">
 
         <input type=hidden name="oid" value="00D8J0000008fh0">
-        <input type=hidden name="retURL" value="https://gleanings.org/volunteering/">
+        <input type=hidden name="retURL" value="https://gleanings.org/thank-you/">
         <input type=hidden name="recordType" value="0128J0000004HT8">
         <input type="hidden" id="lead_source" name="lead_source" value="booking_form">
         <!--  ----------------------------------------------------------------------  -->
